--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,23 +8,20 @@ on:
   push :
     branches:    
       - 'main'
-env :
-  API_URL : "https://scale.api.zscwp.net"
-  AUTH_URL : "https://scale-auth.zscwp.net"
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses : ZscalerCWP/Zscaler-IaC-Action@main
+      - uses : ZscalerCWP/Zscaler-IaC-Action@v1.4.0
         id : iac-scan
         with:
           client_id : ${{ secrets.ZSCANNER_CLIENT_ID }}
           client_secret : ${{ secrets.ZSCANNER_CLIENT_SECRET }}
           fail_build : 'true'
-          output_format : 'human'
+          output_format : 'human+github-sarif'
           log_level : 'debug'
-          region : 'CUSTOM'
+          region : 'US'
       - run : echo ${{ steps.iac-scan.outputs.sarif_file_path }}
       - name: Upload SARIF file
         if: ${{ steps.zscaler-iac-scan.outputs.sarif_file_path != '' }}
