--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,14 +6,14 @@ on:
     types: [opened]
   workflow_dispatch :
   push :
-    branches:    
+    branches:
       - 'main'
 env :
-  API_URL : "https://scale.api.zscwp.net"
-  AUTH_URL : "https://scale-auth.zscwp.net"
+  API_URL : "https://int.api.zscwp.io"
+  AUTH_URL : "https://int-auth.zscwp.io"
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
       - uses : ZscalerCWP/Zscaler-IaC-Action@main
@@ -22,12 +22,12 @@ jobs:
           client_id : ${{ secrets.ZSCANNER_CLIENT_ID }}
           client_secret : ${{ secrets.ZSCANNER_CLIENT_SECRET }}
           fail_build : 'true'
-          output_format : 'human'
+          output_format : 'human+github-sarif'
           log_level : 'debug'
           region : 'CUSTOM'
       - run : echo ${{ steps.iac-scan.outputs.sarif_file_path }}
       - name: Upload SARIF file
-        if: ${{ steps.zscaler-iac-scan.outputs.sarif_file_path != '' }}
-        uses: github/codeql-action/upload-sarif@v1
+        if: ${{ success() || failure() && (steps.iac-scan.outputs.sarif_file_path != '') }}
+        uses: github/codeql-action/upload-sarif@v2
         with:
-          sarif_file: ${{ steps.zscaler-iac-scan.outputs.sarif_file_path }}
+          sarif_file: ${{ steps.iac-scan.outputs.sarif_file_path }}
