--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,15 +8,12 @@ on:
   push :
     branches:    
       - 'main'
-env :
-  API_URL : "https://main.dev.api.zscwp.io"
-  AUTH_URL : "https://dev-auth.zscwp.io"
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses : ZscalerCWP/Zscaler-IaC-Action@main
+      - uses : ZscalerCWP/Zscaler-IaC-Action@v1.4.0
         id : iac-scan
         with:
           client_id : ${{ secrets.ZSCANNER_CLIENT_ID }}
@@ -24,7 +21,7 @@ jobs:
           fail_build : 'true'
           output_format : 'human+github-sarif'
           log_level : 'debug'
-          region : 'CUSTOM'
+          region : 'EU'
       - run : echo ${{ steps.iac-scan.outputs.sarif_file_path }}
       - name: Upload SARIF file
         if: ${{ steps.zscaler-iac-scan.outputs.sarif_file_path != '' }}
