--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,12 +8,15 @@ on:
   push :
     branches:    
       - 'main'
+env :
+  API_URL : "https://main.dev.api.zscwp.io"
+  AUTH_URL : "https://dev-auth.zscwp.io"
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses : ZscalerCWP/Zscaler-IaC-Action@v1.4.0
+      - uses : ZscalerCWP/Zscaler-IaC-Action@main
         id : iac-scan
         with:
           client_id : ${{ secrets.ZSCANNER_CLIENT_ID }}
@@ -21,7 +24,7 @@ jobs:
           fail_build : 'true'
           output_format : 'human+github-sarif'
           log_level : 'debug'
-          region : 'EU'
+          region : 'CUSTOM'
       - run : echo ${{ steps.iac-scan.outputs.sarif_file_path }}
       - name: Upload SARIF file
         if: ${{ steps.zscaler-iac-scan.outputs.sarif_file_path != '' }}
